prevent track visibility; clean up

--- a/src/components/color_picker/_color_picker.scss
+++ b/src/components/color_picker/_color_picker.scss
@@ -11,6 +11,11 @@
     &[class*='--compressed'] {
       @include euiFormControlWithIcon($isIconOptional: false, $side: 'right', $compressed: true);
     }
+
+    + .euiFormControlLayoutIcons {
+      // Override :disabled state, which obscures the selected color
+      color: inherit;
+    }
   }
 }
 
